--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,7 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +16,15 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+
+        <% if book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
+        <td><p><%= link_to book_favorites_path(book), method: :delete do %>
+          ♥<%= book.favorites.count %> いいね<% end %></p></td>
+
+        <% else %> <!-- #現在のユーザーにいいねされていない場合 -->
+        <td><p><%= link_to book_favorites_path(book), method: :post do %>
+          ♡<%= book.favorites.count %> いいね<% end %></p></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
