--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,16 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+
+          <% if @book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
+        <td><p><%= link_to book_favorites_path(@book), method: :delete do %>
+          ♥<%= @book.favorites.count %> いいね<% end %></p></td>
+
+        <% else %> <!-- #現在のユーザーにいいねされていない場合 -->
+        <td><p><%= link_to book_favorites_path(@book), method: :post do %>
+          ♡<%= @book.favorites.count %> いいね<% end %></p></td>
+        <% end %>
+
             <% if @book.user == current_user %>
               <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
               <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
