--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -36,6 +36,27 @@
         </tr>
       </table>
 
+      <table class='table'>
+        <% @book_comments.each do |comment| %>
+        <tr>
+        <td><%= link_to(comment.user) do %>
+          <%= image_tag comment.user.get_profile_image(100,100) %><br>
+          <%= comment.user.name %>
+          <% end %>
+        </td>
+        <td><%= comment.comment %></td>
+
+
+
+        <% if comment.user == current_user %>
+        <td><%= link_to 'Destroy', book_book_comment_path(comment.book , comment), method: :delete, class: "btn btn-sm btn-danger" %></td>
+        <% end %>
+      </tr>
+      <% end %>
+
+      </table>
+
+
       <%= form_with model: [@book, @book_comment] do |f| %>
       <%= f.text_area :comment, style: "width:100%;" %>
       <%= f.submit "送信" %>
