--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,23 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th><%= link_to followers_user_path(user) do %><%= user.followers.count %><% end %></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th><%= link_to followeds_user_path(user) do %><%= user.followeds.count %><% end %></th>
+  </tr>
+  <% if user != current_user %>
+  <tr><th colspan = "2">
+    <% if user.is_followed_by?(current_user) %>
+      <%= link_to "フォロー外す", user_relationships_path(user), method: :delete %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(user), method: :post %>
+    <% end %>
+  </th></tr>
+  <% end %>
 </table>
 
 <div class='row'>
