--- a/app/views/users/followeds.html.erb
+++ b/app/views/users/followeds.html.erb
@@ -1,3 +1,4 @@
+
 <table class='table'>
   <thead>
     <tr>
@@ -7,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    <% users.each do |user| %>
+    <% @users.each do |user| %>
       <tr>
         <td><%= image_tag user.get_profile_image(50,50) %></td>
         <td><%= user.name %></td>
