--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,14 +18,16 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
-          <% if @book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
-        <td><p><%= link_to book_favorites_path(@book), method: :delete do %>
-          ♥<%= @book.favorites.count %> いいね<% end %></p></td>
+          <%= render 'favorites/favorite-btn', book: @book %>
 
-        <% else %> <!-- #現在のユーザーにいいねされていない場合 -->
-        <td><p><%= link_to book_favorites_path(@book), method: :post do %>
-          ♡<%= @book.favorites.count %> いいね<% end %></p></td>
-        <% end %>
+        <!--  <% if @book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
+        <!--<td><p><%= link_to book_favorites_path(@book), method: :delete do %>-->
+        <!--  ♥<%= @book.favorites.count %> いいね<% end %></p></td>-->
+
+        <!--<% else %> <!-- #現在のユーザーにいいねされていない場合 -->-->
+        <!--<td><p><%= link_to book_favorites_path(@book), method: :post do %>-->
+        <!--  ♡<%= @book.favorites.count %> いいね<% end %></p></td>-->
+        <!--<% end %>-->
 
         <td>コメント数:<%= @book.book_comments.count %></td>
 
