--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,14 +16,14 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td class="favorite_buttons_<%= book.id %>"><%= render 'favorites/favorite-btn', book: book %></td>
 
-        <%= render 'favorites/favorite-btn', book: book %>
 
         <!--<% if book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
         <!--<td><p><%= link_to book_favorites_path(book), method: :delete do %>-->
         <!--  ♥<%= book.favorites.count %> いいね<% end %></p></td>-->
 
-        <!--<% else %> <!-- #現在のユーザーにいいねされていない場合 -->-->
+        <!--<% else %> <!-- #現在のユーザーにいいねされていない場合 -->
         <!--<td><p><%= link_to book_favorites_path(book), method: :post do %>-->
         <!--  ♡<%= book.favorites.count %> いいね<% end %></p></td>-->
         <!--<% end %>-->
