--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,13 +18,13 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
-          <%= render 'favorites/favorite-btn', book: @book %>
+          <td class="favorite_buttons_<%= @book.id %>"><%= render 'favorites/favorite-btn', book: @book %></td>
 
         <!--  <% if @book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
         <!--<td><p><%= link_to book_favorites_path(@book), method: :delete do %>-->
         <!--  ♥<%= @book.favorites.count %> いいね<% end %></p></td>-->
 
-        <!--<% else %> <!-- #現在のユーザーにいいねされていない場合 -->-->
+        <!--<% else %> <!-- #現在のユーザーにいいねされていない場合 -->
         <!--<td><p><%= link_to book_favorites_path(@book), method: :post do %>-->
         <!--  ♡<%= @book.favorites.count %> いいね<% end %></p></td>-->
         <!--<% end %>-->
