--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,7 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <td class="favorite_buttons_<%= book.id %>"><%= render 'favorites/favorite-btn', book: book %></td>
+        <td id="favorite_buttons_<%= book.id %>"><%= render 'favorites/favorite', book: book %></td>
 
 
         <!--<% if book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
