--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,7 +18,7 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
-          <td class="favorite_buttons_<%= @book.id %>"><%= render 'favorites/favorite-btn', book: @book %></td>
+          <th id="favorite_buttons_<%= @book.id %>"><%= render 'favorites/favorite', book: @book %></td>
 
         <!--  <% if @book.favorited_by?(current_user) %> <!-- #現在のユーザーにいいねされていた場合 -->
         <!--<td><p><%= link_to book_favorites_path(@book), method: :delete do %>-->
