--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,28 +38,9 @@
         </tr>
       </table>
 
-      <table class='table'>
-        <% @book_comments.each do |comment| %>
-        <tr>
-        <td><%= link_to(comment.user) do %>
-          <%= image_tag comment.user.get_profile_image(100,100) %><br>
-          <%= comment.user.name %>
-          <% end %>
-        </td>
-        <td><%= comment.comment %></td>
+      <div class="comments"><%= render 'comments', book_comments: @book_comments %></div>
 
-
-
-        <% if comment.user == current_user %>
-        <td><%= link_to 'Destroy', book_book_comment_path(comment.book , comment), method: :delete, class: "btn btn-sm btn-danger" %></td>
-        <% end %>
-      </tr>
-      <% end %>
-
-      </table>
-
-
-      <%= form_with model: [@book, @book_comment] do |f| %>
+      <%= form_with model: [@book, @book_comment], local: false do |f| %>
       <%= f.text_area :comment, style: "width:100%;" %>
       <%= f.submit "送信" %>
       <% end %>
